all devtools check passing

--- a/vignettes/continuous-phylogeography.Rmd
+++ b/vignettes/continuous-phylogeography.Rmd
@@ -1,6 +1,10 @@
 ---
 title: "Continuous phylogeography with ggphylogeo"
 output: rmarkdown::html_vignette
+vignette: >
+    %\VignetteIndexEntry{Continuous phylogeography with ggphylogeo}
+    %\VignetteEngine{knitr::rmarkdown}
+    %\VignetteEncoding{UTF-8}
 ---
 
 ```{r setup, include=FALSE}
